--- a/hw4q1/.cproject
+++ b/hw4q1/.cproject
@@ -24,10 +24,17 @@
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1261324584" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 							<tool id="photran.managedbuild.tool.gnu.fortran.compiler.win32.exe.debug.823967675" name="GNU Fortran Compiler" superClass="photran.managedbuild.tool.gnu.fortran.compiler.win32.exe.debug">
-								<option id="gnu.fortran.compiler.option.misc.other.430836618" superClass="gnu.fortran.compiler.option.misc.other" value="-c -fmessage-length=0 -cpp" valueType="string"/>
+								<option id="gnu.fortran.compiler.option.misc.other.430836618" name="Other flags" superClass="gnu.fortran.compiler.option.misc.other" value="-c -fmessage-length=0 -cpp" valueType="string"/>
+								<option id="gnu.fortran.compiler.option.include.paths.1194692320" name="Include paths (-I)" superClass="gnu.fortran.compiler.option.include.paths" valueType="includePath">
+									<listOptionValue builtIn="false" value="&quot;C:\Program Files\MPICH2\include&quot;"/>
+								</option>
 								<inputType id="photran.managedbuild.tool.gnu.fortran.compiler.input.1918570172" superClass="photran.managedbuild.tool.gnu.fortran.compiler.input"/>
 							</tool>
 							<tool id="photran.managedbuild.tool.gnu.fortran.linker.win32.exe.debug.345891423" name="GNU Fortran Linker" superClass="photran.managedbuild.tool.gnu.fortran.linker.win32.exe.debug">
+								<option id="gnu.fortran.link.option.userobjs.1279978324" name="Other objects" superClass="gnu.fortran.link.option.userobjs" valueType="userObjs"/>
+								<option id="gnu.fortran.link.option.other.943295888" name="Other options (-Xlinker [option])" superClass="gnu.fortran.link.option.other" valueType="stringList">
+									<listOptionValue builtIn="false" value="-I&quot;C:\Program Files\MPICH2\include&quot;"/>
+								</option>
 								<inputType id="photran.managedbuild.tool.gnu.fortran.linker.input.885414761" superClass="photran.managedbuild.tool.gnu.fortran.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
@@ -65,9 +72,19 @@
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1568166345" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 							<tool id="photran.managedbuild.tool.gnu.fortran.compiler.win32.exe.release.987308155" name="GNU Fortran Compiler" superClass="photran.managedbuild.tool.gnu.fortran.compiler.win32.exe.release">
+								<option id="gnu.fortran.compiler.option.misc.other.1774960191" name="Other flags" superClass="gnu.fortran.compiler.option.misc.other" value="-c -fmessage-length=0 -cpp" valueType="string"/>
+								<option id="gnu.fortran.compiler.option.include.paths.133996056" name="Include paths (-I)" superClass="gnu.fortran.compiler.option.include.paths" valueType="includePath">
+									<listOptionValue builtIn="false" value="&quot;C:\Program Files\MPICH2\include&quot;"/>
+								</option>
 								<inputType id="photran.managedbuild.tool.gnu.fortran.compiler.input.2039592223" superClass="photran.managedbuild.tool.gnu.fortran.compiler.input"/>
 							</tool>
 							<tool id="photran.managedbuild.tool.gnu.fortran.linker.win32.exe.release.2132904721" name="GNU Fortran Linker" superClass="photran.managedbuild.tool.gnu.fortran.linker.win32.exe.release">
+								<option id="gnu.fortran.link.option.paths.329039924" name="Library search path (-L)" superClass="gnu.fortran.link.option.paths" valueType="stringList">
+									<listOptionValue builtIn="false" value=""/>
+								</option>
+								<option id="gnu.fortran.link.option.other.963742782" name="Other options (-Xlinker [option])" superClass="gnu.fortran.link.option.other" valueType="stringList">
+									<listOptionValue builtIn="false" value="-I/usr/include"/>
+								</option>
 								<inputType id="photran.managedbuild.tool.gnu.fortran.linker.input.672579965" superClass="photran.managedbuild.tool.gnu.fortran.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
@@ -91,4 +108,5 @@
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 	<storageModule moduleId="refreshScope"/>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
