--- a/hw4q2/.cproject
+++ b/hw4q2/.cproject
@@ -29,6 +29,12 @@
 							</tool>
 							<tool id="photran.managedbuild.tool.gnu.fortran.linker.win32.exe.debug.162315542" name="GNU Fortran Linker" superClass="photran.managedbuild.tool.gnu.fortran.linker.win32.exe.debug">
 								<option id="gnu.fortran.link.option.ldflags.444492803" name="Linker flags" superClass="gnu.fortran.link.option.ldflags" value="-fopenmp" valueType="string"/>
+								<option id="gnu.fortran.link.option.libs.1648171467" superClass="gnu.fortran.link.option.libs" valueType="libs">
+									<listOptionValue builtIn="false" value="lapack"/>
+								</option>
+								<option id="gnu.fortran.link.option.paths.877678829" superClass="gnu.fortran.link.option.paths" valueType="stringList">
+									<listOptionValue builtIn="false" value="&quot;C:\Users\arun\SkyDrive\fortranlibs&quot;"/>
+								</option>
 								<inputType id="photran.managedbuild.tool.gnu.fortran.linker.input.1653780997" superClass="photran.managedbuild.tool.gnu.fortran.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
