--- a/hw4q2/.cproject
+++ b/hw4q2/.cproject
@@ -29,10 +29,10 @@
 							</tool>
 							<tool id="photran.managedbuild.tool.gnu.fortran.linker.win32.exe.debug.162315542" name="GNU Fortran Linker" superClass="photran.managedbuild.tool.gnu.fortran.linker.win32.exe.debug">
 								<option id="gnu.fortran.link.option.ldflags.444492803" name="Linker flags" superClass="gnu.fortran.link.option.ldflags" value="-fopenmp" valueType="string"/>
-								<option id="gnu.fortran.link.option.libs.1648171467" superClass="gnu.fortran.link.option.libs" valueType="libs">
+								<option id="gnu.fortran.link.option.libs.1648171467" name="Libraries (-l)" superClass="gnu.fortran.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="lapack"/>
 								</option>
-								<option id="gnu.fortran.link.option.paths.877678829" superClass="gnu.fortran.link.option.paths" valueType="stringList">
+								<option id="gnu.fortran.link.option.paths.877678829" name="Library search path (-L)" superClass="gnu.fortran.link.option.paths" valueType="stringList">
 									<listOptionValue builtIn="false" value="&quot;C:\Users\arun\SkyDrive\fortranlibs&quot;"/>
 								</option>
 								<inputType id="photran.managedbuild.tool.gnu.fortran.linker.input.1653780997" superClass="photran.managedbuild.tool.gnu.fortran.linker.input">
@@ -72,7 +72,7 @@
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1153606118" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 							<tool id="photran.managedbuild.tool.gnu.fortran.compiler.win32.exe.release.1233793159" name="GNU Fortran Compiler" superClass="photran.managedbuild.tool.gnu.fortran.compiler.win32.exe.release">
-								<option id="gnu.fortran.compiler.option.misc.other.80207891" name="Other flags" superClass="gnu.fortran.compiler.option.misc.other" value="-c -fmessage-length=0 -cpp -fcheck=all -ffree-line-length-0" valueType="string"/>
+								<option id="gnu.fortran.compiler.option.misc.other.80207891" name="Other flags" superClass="gnu.fortran.compiler.option.misc.other" value="-c -fmessage-length=0 -cpp -ffree-line-length-0" valueType="string"/>
 								<option id="gnu.fortran.compiler.option.warnings.toerrors.51213693" name="Warnings as errors (-Werror)" superClass="gnu.fortran.compiler.option.warnings.toerrors" value="false" valueType="boolean"/>
 								<inputType id="photran.managedbuild.tool.gnu.fortran.compiler.input.570762472" superClass="photran.managedbuild.tool.gnu.fortran.compiler.input"/>
 							</tool>
